Update Spark from 2.4.5 to 3.0.1